refactor(build): `module` points to es5 code with es2015 imports/export, `es2015` points to pure es2015, `main` points to umd

--- a/scripts/npm/package.json
+++ b/scripts/npm/package.json
@@ -8,8 +8,9 @@
     "url": "https://github.com/driftyco/ionic.git"
   },
   "license": "MIT",
-  "main": "esm/index.js",
+  "main": "umd/index.js",
   "module": "index.js",
+  "es2015": "es2015/index.js",
   "peerDependencies": {
     "@angular/common": "",
     "@angular/compiler": "",
